--- a/mini-musor/index.html
+++ b/mini-musor/index.html
@@ -20,7 +20,7 @@
 								if (entry.intersectionRatio >= 0.1) {
 									(function () {
 										var d = document, s = d.createElement('script');
-										s.src = 'https://'+('kabanblog.disqus.com').trim()+'.disqus.com/embed.js';
+										s.src = 'https://'+('kabanblog').trim()+'.disqus.com/embed.js';
 										s.setAttribute('data-timestamp', +new Date());
 										(d.head || d.body).appendChild(s);
 									})();
@@ -37,7 +37,7 @@
 				} else {
 					(function () {
 						var d = document, s = d.createElement('script');
-						s.src = 'https://'+('kabanblog.disqus.com').trim()+'.disqus.com/embed.js';
+						s.src = 'https://'+('kabanblog').trim()+'.disqus.com/embed.js';
 						s.setAttribute('data-timestamp', +new Date());
 						(d.head || d.body).appendChild(s);
 					})();
